# nand2tetris

./: .gitignore  README.md
01/: DMux.hdl  DMux4Way.hdl  DMux8Way.hdl  Mux.hdl  Mux4Way16.hdl  Mux8Way16.hdl  Or.hdl  Or8Way.hdl  Xor.hdl
02/: ALU.hdl  Add16.hdl  FullAdder.hdl  Inc16.hdl
03/a/: Bit.hdl  PC.hdl  RAM64.hdl  RAM8.hdl  Register.hdl
03/b/: RAM16K.hdl  RAM4K.hdl  RAM512.hdl
04/fill/: Fill.asm  Fill.hack
04/mult/: Mult.asm  Mult.hack
05/: CPU.hdl  Computer.hdl  Memory.hdl
06/: HackAssembler.cabal  pyproject.toml
06/hack-assembler/: foo.py  main.py
06/src/: Main.hs  Main1.hs  Main2.hs  Main3.hs  Parse.hs  Translate.hs  Types.hs
07/: VMTranslator.cabal
07/MemoryAccess/BasicTest/: BasicTest.asm
07/MemoryAccess/PointerTest/: PointerTest.asm
07/MemoryAccess/StaticTest/: StaticTest.asm
07/StackArithmetic/SimpleAdd/: SimpleAdd.asm
07/StackArithmetic/StackTest/: StackTest.asm
07/src/: Parse.hs  Translate.hs  Types.hs
07/src/Translate/: Arithmetic.hs
07/src/Translate/Memory/: Pop.hs
08/: VMTranslator.cabal
08/FunctionCalls/FibonacciElement/: FibonacciElement.asm
08/FunctionCalls/NestedCall/: NestedCall.asm
08/FunctionCalls/SimpleFunction/: SimpleFunction.asm
08/FunctionCalls/StaticsTest/: StaticsTest.asm
08/ProgramFlow/BasicLoop/: BasicLoop.asm
08/ProgramFlow/FibonacciSeries/: FibonacciSeries.asm
08/src/: Main.hs  Parse.hs  Translate.hs  Types.hs
08/src/Translate/: Branching.hs  Function.hs  Logical.hs  Memory.hs
08/src/Translate/Memory/: Push.hs
09/GameOfLife/: Board.jack  Board.vm  LFSR32Rand.jack  LFSR32Rand.vm  Main.jack  Main.vm
10/: JackAnalyzer.cabal  go.mod
10/ArrayTest/: Main.xml  MainT.xml
10/ExpressionLessSquare/: Main.xml  MainT.xml  Square.xml  SquareGame.xml  SquareGameT.xml  SquareT.xml
10/Square/: MainT.xml  SquareGameT.xml  SquareT.xml
10/cmd/jack_analyzer/: main.go
10/internal/combin/: combin.go
10/internal/tokenizer/: tokenizer.go
10/src/: AST.hs  Consumer.hs  Foo.hs  Main.hs  Parse.hs  Pipee.hs  Token.hs  Types.hs  XML.hs
10/src/AST/: Build.hs  ToXML.hs
10/src/Token/: Parse.hs  ToXML.hs
11/: JackCompiler.cabal
11/Average/: Main.vm
11/ComplexArrays/: Main.vm
11/ConvertToBin/: Main.vm
11/Pong/: Ball.vm  Bat.vm  PongGame.vm
11/Square/: Square.vm  SquareGame.vm
11/src/: AST.hs  Compiler.hs  Main.hs  Parse.hs  SymbolTable.hs  VmCmd.hs
12/: Array.jack  Keyboard.jack  Math.jack  Memory.jack  Output.jack  Screen.jack  String.jack  Sys.jack
12/ArrayTest/: Array.jack
12/KeyboardTest/: Keyboard.jack  Keyboard.vm
12/MathTest/: Math.jack  Math.vm
12/MemoryTest/: Memory.jack  Memory.vm
12/OutputTest/: Output.jack  Output.vm
12/ScreenTest/: Screen.jack  Screen.vm
12/StringTest/: String.jack  String.vm
12/SysTest/: Sys.jack  Sys.vm
