cabal-version:      3.4
name:               HackAssembler
version:            0.1.0.0
build-type:         Simple

common warnings
  ghc-options: -Wall

executable HackAssembler
  import:           warnings
  main-is:          Main.hs
  build-depends:
      base ^>=4.18.2.1
    , filepath ^>=1.5.2.0
    , megaparsec >=9.6.1
    , mtl ^>=2.3.1
  hs-source-dirs:   src
  default-language: GHC2021
