cabal-version:      3.4
name:               JackAnalyzer
version:            0.1.0.0
build-type:         Simple

common warnings
    ghc-options: -Wall

executable JackAnalyzer
  import:           warnings
  default-language: GHC2021
  build-depends:
      base ^>=4.17.2.1
    , directory ^>=1.3.8.5
    , filepath ^>=1.5.2.0
    , megaparsec >=9.6.1
    , mtl ^>=2.3.1
  default-extensions:
    LambdaCase
  hs-source-dirs:   src
  main-is:          Main.hs
  other-modules:
    AST
    AST.Build
    AST.ToXML
    Token
    Token.Parse
    Token.ToXML
    XML
