cabal-version:      3.4
name:               JackCompiler
version:            0.1.0.0
build-type:         Simple

common warnings
  ghc-options: -Wall

executable JackCompiler
  import:           warnings
  default-language: GHC2021
  build-depends:
      base ^>=4.17.2.1
    , directory ^>=1.3.8.5
    , filepath ^>=1.5.3.0
    , lens ^>=5.3.2
    , megaparsec ^>=9.6.1
    , mtl ^>=2.3.1
    , unordered-containers ^>=0.2.20
  default-extensions:
    DuplicateRecordFields
    LambdaCase
    OverloadedRecordDot
  hs-source-dirs:   src
  main-is:          Main.hs
  other-modules:
    AST
    Parse
    SymbolTable
    VmCmd
